top image min height added, should solve the issue on mobile screen

--- a/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/partials/_page.scss
+++ b/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/partials/_page.scss
@@ -3,6 +3,7 @@
   @include full-width;
   position: relative;
   height: 48.9vw;
+  min-height: 300px;
   max-height: 600px;
 
   &-inner {
